crates/did/src/key/snapshots/did__key__resolver__test__dereferenced.snap
---
source: crates/did/src/key/resolver.rs
assertion_line: 135
expression: dereferenced
---
{
  "metadata": {
    "contentType": "application/did+ld+json"
  },
  "contentStream": {
    "VerificationMethod": {
      "id": "did:key:z6MkhaXgBZDvotDkL5257faiztiGiC2QtKLGpbnnEGta2doK#z6MkhaXgBZDvotDkL5257faiztiGiC2QtKLGpbnnEGta2doK",
      "type": "Multikey",
      "controller": "did:key:z6MkhaXgBZDvotDkL5257faiztiGiC2QtKLGpbnnEGta2doK",
      "publicKeyMultibase": "z6MkhaXgBZDvotDkL5257faiztiGiC2QtKLGpbnnEGta2doK"
    }
  },
  "contentMetadata": {}
}
