crates/did/src/key/snapshots/did__key__resolver__test__metadata.snap
---
source: crates/did/src/key/resolver.rs
assertion_line: 103
expression: resolved.metadata
---
{
  "contentType": "application/did+ld+json",
  "pattern": "^did:key:z[a-km-zA-HJ-NP-Z1-9]+$",
  "did": {
    "didString": "did:key:z6MkhaXgBZDvotDkL5257faiztiGiC2QtKLGpbnnEGta2doK",
    "methodSpecificId": "z6MkhaXgBZDvotDkL5257faiztiGiC2QtKLGpbnnEGta2doK",
    "method": "key"
  }
}
